BUG:CSS:EMAIL FORM: WISYWIG EDITOR: ADD LINK BUTTON: Modal cut off due to layer. Either re-center the modal or change the z-index.

--- a/app/stylesheets/_layout.scss
+++ b/app/stylesheets/_layout.scss
@@ -23,6 +23,10 @@ body {
 .main-content {
   width: 100%;
   height: 100%;
+
+  .jspContainer {
+    z-index: 99;
+  }
 }
 
 .page-header {
